--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,8 @@
     Sector F is Clinton<br>
     Sector C is Beltsville<br>
     Sector W is Fort Washington<br>
-    Sector H is Westphalia
+    Sector H is Westphalia<br>
+    Sector TRU is Unknown
 
 <div style="margin-top: 30px; padding-top: 10px; border-top: 1px solid #ccc;">
     <h3>Summary</h3>
